--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -47,45 +47,41 @@ _
     </div>
 
 
-
-   <!-- Start Banner Hero -->
-   <div id="template-mo-zay-hero-carousel" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <!-- Set the outer container to be full-width -->
-            <div class="container-fluid p-0">
-                <div class="row p-0">
-                    <div class="col-12">
-                       
-
-                                <div class="item" style="--position: 3"><img src="/images/imagesf.jpg" alt=""></div>
-                                <div class="item" style="--position: 4"><img src="/images/imagesl.jpg" alt=""></div>
-                                <div class="item" style="--position: 5"><img src="/images/8988a42a0682e6c131395b8834469df7.jpg" alt=""></div>
-                                <div class="item" style="--position: 6"><img src="/images/GettyImages-2152791473.jpg.webp" alt=""></div>
-                                <div class="item" style="--position: 7"><img src="/images/imagescasado.jpg" alt=""></div>
-                                <div class="item" style="--position: 8"><img src="/images/imagesfelix.jpg" alt=""></div>
-                                <div class="item" style="--position: 9"><img src="/images/imageslew.jpg" alt=""></div>
-                                <div class="item" style="--position: 10"><img src="/images/imagesdej.jpg" alt=""></div>
-                            </div>
-                            <div class="content">
-                                <h1 data-content="BARCA">
-                                    Barca
-                                </h1>
-                                <div class="author">
-                                    <h2>visca Barca</h2>
-                                    <p><b>visca catalonia</b></p>
-                                   
-                                </div>
-                                <div class="model"></div>
-                            </div>
-                        </div>
-                    
-                    </div>
-                </div>
+    <div class="banner">
+        <div class="slider">
+            <div class="item" style="--position: 3; --quantity: 8;">
+                <img src="/images/imagesf.jpg" alt="Barcelona Player">
+            </div>
+            <div class="item" style="--position: 4; --quantity: 8;">
+                <img src="/images/imagesl.jpg" alt="Barcelona Player">
+            </div>
+            <div class="item" style="--position: 5; --quantity: 8;">
+                <img src="/images/8988a42a0682e6c131395b8834469df7.jpg" alt="Barcelona Player">
+            </div>
+            <div class="item" style="--position: 6; --quantity: 8;">
+                <img src="/images/GettyImages-2152791473.jpg.webp" alt="Barcelona Player">
+            </div>
+            <div class="item" style="--position: 7; --quantity: 8;">
+                <img src="/images/imagescasado.jpg" alt="Barcelona Player">
+            </div>
+            <div class="item" style="--position: 8; --quantity: 8;">
+                <img src="/images/imagesfelix.jpg" alt="Barcelona Player">
+            </div>
+            <div class="item" style="--position: 9; --quantity: 8;">
+                <img src="/images/imageslew.jpg" alt="Barcelona Player">
+            </div>
+            <div class="item" style="--position: 10; --quantity: 8;">
+                <img src="/images/imagesdej.jpg" alt="Barcelona Player">
+            </div>
+        </div>
+        <div class="content">
+            <h1 data-content="BARCA">Barca</h1>
+            <div class="author">
+                <h2>visca Barca</h2>
+                <p><b>visca catalonia</b></p>
             </div>
         </div>
     </div>
-</div>
     <!-- Start Categories of The Month -->
     <section  class="container py-5">
         <div class="row text-center pt-3">
