--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -48,7 +48,7 @@ body::before {
     overflow: hidden;
     position: relative;
     background-color: #000;
-    margin-bottom: 50px;
+    margin-top: -20px;
 }
 
 /* Slider Styles */
