--- a/views/user/forget-pass.ejs
+++ b/views/user/forget-pass.ejs
@@ -335,7 +335,7 @@
                 </div>
     
                 <div class="back-to-login">
-                    <a href="#"><i class="fas fa-arrow-left"></i> Back to Login</a>
+                    <a href="/login"><i class="fas fa-arrow-left"></i> Back to Login</a>
                 </div>
             </div>
         </div>
