--- a/views/user/forget-pass.ejs
+++ b/views/user/forget-pass.ejs
@@ -321,6 +321,7 @@
                             <input type="email" id="email" name="email" placeholder="Enter your email address" required>
                         </div>
                         <div id="email-error" class="error-message"></div>
+                        <p style="color: #DC2626; margin-top: 10px;"><%= message ? message : ''  %></p>
                     </div>
                     <button type="submit" class="btn-reset">Send Verification Code</button>
                 </form>
