--- a/views/admin/productAdd.ejs
+++ b/views/admin/productAdd.ejs
@@ -402,7 +402,7 @@ form.addEventListener('submit', async (event) => {
     if (!isValid) return; 
 
 
-if(ifisValid){
+if(isValid){
     window.location.reload()
 }
  
