--- a/views/admin/productAdd.ejs
+++ b/views/admin/productAdd.ejs
@@ -427,7 +427,7 @@ if(isValid){
         }
 
  
-        const response = await fetch(form.action, {
+        const response = await fetch("/admin/products/add", {
     method: 'POST',
     body: formData
 });
